Add: welcome message and button to start game to html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	</head>
 	
 	<body>
-		<h1>Check the console!</h1>
+		<h1 id="welcome">Welcome to RPS!</h1>
+		<p id="tutorial">To play the game, select the button "Play game". Then choose rock, paper, or scissors.</p>
+		<button id="game-start">Start Game</button>
 		<script src="./app.js"></script>
 	</body>
 </html>
