--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	
 	<body>
 		<h1 id="welcome">Welcome to RPS!</h1>
-		<p id="tutorial">To play the game, select the button "Play game". Then choose rock, paper, or scissors.</p>
-		<button id="game-start">Start Game</button>
+		<p id="message">To play the game, select the button "Play game". Then choose rock, paper, or scissors.</p>
+		<div id='buttons'>
+			<button id="game-start">Start Game</button>
+		</div>
 		<script src="./app.js"></script>
 	</body>
 </html>
